--- a/report.html
+++ b/report.html
@@ -17873,10 +17873,10 @@ zM3wGAAAAABJRU5ErkJggg==
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><strong>Answer:</strong> In total 0.7068 variance in the data is explained by the first and second principal component (PC), 0.9311 variance by the first 4 principal components.</p>
 <ul>
-<li>The 1st PC best represents a decrease in Detergents_Paper, Milk and Grocery, and a slight increase on others. </li>
-<li>The 2nd PC best represents a decrease in Fresh, Frozen and Delicatessen, which appears to be orthogonal to the 1st PC.</li>
-<li>The 3rd PC best represents a decrease in Fresh, and an increase in Frozen and Deli.</li>
-<li>The 4th PC best represents a decrease in Fresh and Deli, and an increase in Frozen.</li>
+<li>The 1st PC best represents a positive correlation of spending on Detergents_Paper, Milk, Grocery and a little Deli. If a customer has a large negative value of PC1, it will buy more Milk and Grocery, with a lot more Detergents_Paper based on the weights. If it has a large positive value of PC1, it will buy less those products.  </li>
+<li>The 2nd PC best represents a positive correlation of Fresh, Frozen and Deli. It appears to be orthogonal to the 1st PC, because 2nd PC tells more about Fresh, Frozen and Deli while 1st PC focuses mostly on the other three. If a customer has a large negative value of PC2, it will buy more Fresh, less Frozen and Deli.</li>
+<li>The 3rd PC best represents a negative correlation of Fresh and Frozen/Deli. If a customer has a large positive value of PC3, it will buy much less Fresh, but more Frozen and much more Deli. </li>
+<li>The 4th PC best represents a negative correlation Fronzen and Deli. If a customer has a large posive value of PC4, it will buy much more Frozen but less Deli.</li>
 </ul>
 
 </div>
